ex09_rbac.yaml
apiVersion: v1
kind: Pod
metadata:
  name: list-pods
  namespace: default
spec:
  serviceAccountName: ubuntu-sa
  containers:
  - name: list-pods
    image: bitnami/kubectl:latest
    #permite que o container fique em loop sempre disponível, caso contŕario, completed
    command: ["/bin/sh", "-c", "while true; do sleep 30; done"]
