ex11_hpa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubuntu-hpa
  template:
    metadata:
      labels:
        app: ubuntu-hpa
    spec:
      containers:
      - name: ubuntu
        image: ubuntu:latest
        command: ["/bin/bash", "-c", "apt-get update && apt install stress-ng -y && while true; do sleep 30; done"]
        resources:
          requests:
            cpu: 200m
            memory: 500Mi
          limits:
            cpu: 200m 
            memory: 500Mi
