ex14_resource_quota.yaml
apiVersion: v1 
kind: Namespace
metadata:
  name: quota 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-quota
  namespace: quota
spec:
  selector:
    matchLabels:
      app: quota
  template:
    metadata:
      labels:
        app: quota
    spec:
      containers:
      - name: quota-cont
        image: ubuntu:24.10
        command: ["/bin/bash", "-c", "while true; do sleep 30; done"]
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m" # 0.5 cores ou meia CPU
          limits:
            memory: "128Mi"
            cpu: "500m" # 0.5 cores ou meia CPU
  replicas: 10
