ex1_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-ns
  namespace: dev
  labels:
    name: myapp
spec:
  containers:
  - name: pod-ns
    image: ubuntu:latest
