ex4_secrets.yaml
apiVersion: v1
kind: Pod
metadata:
  name: config-pod
  labels:
    app: app-config
spec:
  containers:
  - name: config-cont
    image: postgres:15.0
