ex5_pv_pvc_pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: volume-pod-2
  labels:
    app: volume
spec:
  containers:
  - name: volume-cont
    image: ubuntu:latest
    command: ["/bin/bash", "-c", "while true; do sleep 30; done"]
    volumeMounts:
    - mountPath: /volume-data
      name: volume-ex5
  volumes: 
    - name: volume-ex5
      persistentVolumeClaim:
        claimName: volume-pvc
