ex06_nginx_svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx-cont
        image: nginx:alpine3.20-perl
        ports:
        - containerPort: 80
  replicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginx-app
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30000
  type: NodePort
---
apiVersion: v1
kind: Pod
metadata:
  name: net-pod
  labels:
    app: net-pod
spec:
  containers:
  - name: volume-cont
    image: ubuntu:latest
    command: ["/bin/bash", "-c", "apt-get update && apt-get install -y curl && while true; do sleep 30; done"]
