ex15_selfHealing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx-cont
        image: nginx:alpine3.20-perl
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "1000m"
            memory: 1Gi
          limits:
            cpu: "1500m"
            memory: 1Gi
        livenessProbe:
          tcpSocket:
            port: 32000
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 2
          successThreshold: 1
          timeoutSeconds: 5
  replicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginx-app
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30000
  type: NodePort
